CB-13425. Implement auto telemetry upgrade (cdp-telemetry/cdp-logging-agent)
details:
- add new telemetry.upgrade state
- the upgrade state using yum to upgrade cdp-telemetry and cdp-logging-agent
- desired version properties are used for the upgrades (recommended versions)
- create new telemetry-common module
- add telemetry + diagnostics related common operations to the new module
- for now, only diagnostics contains will do upgrade (doing it on start will coming soon)
- refactor diagnostics steps
- add 2 new steps to diagnostics: salt pillar + state upgrade
- create orchestrator related providers + dtos that holds the common expected results + objects for core/freeipa
- implement orchestrator providers in core/freeipa (can be used a bit more in the future, will need to optimize queries, but as that will be in one place, that can be done easily later)
- added unit tests